tests/schemas/invalid/invalid-change-operation-enum-value.prisma
datasource dbInvalidChangeOp {
  provider = "postgresql"
}

generator clientInvalidChangeOp {
  provider = "prisma-client"
  output   = "../../generated/prisma"
}

generator idbClientInvalidChangeOp {
  provider   = "idb-client-generator"
  output     = "../../generated/prisma-idb"
  outboxSync = true
  rootModel  = "UserInvalidChangeOp"
}

model UserInvalidChangeOp {
  id        String @id @default(uuid())
  name      String
  todos     TodoInvalidChangeOp[]
}

model TodoInvalidChangeOp {
  id     String                @id @default(uuid())
  title  String
  userId String
  user   UserInvalidChangeOp   @relation(fields: [userId], references: [id])
}

model Changelog {
  id            String          @id @default(uuid(7))
  model         String
  keyPath       Json
  operation     ChangeOperation
  scopeKey      String
  outboxEventId String          @unique

  @@index([model, id])
}

enum ChangeOperation {
  create
  update
  read
}
